--- a/mall-order/src/main/resources/application.yml
+++ b/mall-order/src/main/resources/application.yml
@@ -4,6 +4,12 @@ spring:
     url: jdbc:mysql://mall.mysql:3306/mall-oms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: qweQWE915519qwe
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: mall-order
 
 mybatis-plus:
   configuration:
