--- a/mall-coupon/src/main/resources/application.yml
+++ b/mall-coupon/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+      serverAddr: 127.0.0.1:8848
+      config:
+        namespace: f8a8de77-bba8-41ba-ac33-cd980e721880
+        group: coupon
+  config:
+    import:
+      - nacos:${spring.application.name}.properties?refresh=true
   application:
     name: mall-coupon
 
@@ -21,3 +28,8 @@ mybatis-plus:
       id-type: auto
 server:
   port: 3001
+
+coupon:
+  user:
+    name: zhangsan
+    age: 18
